--- a/ihou.tex
+++ b/ihou.tex
@@ -1,7 +1,7 @@
 \documentclass[report, a5paper, draftcopy]{jsbook}
 %\usepackage{draftcopy}
 \usepackage{graphicx}
-\usepackage{amsmath}
+\usepackage{amsmath, amssymb}
 \usepackage{bm}
 \usepackage{listings}
 \begin{document}
